# InternshipProject2DRF

./: .env.example  README.md  main.py  manage.py  pyproject.toml
apps/applications/: admin.py  choices.py  models.py  urls.py  utils.py
apps/applications/api_endpoints/: __init__.py
apps/applications/api_endpoints/ApplicationCreate/: __init__.py  serializers.py  views.py
apps/applications/api_endpoints/ApplicationList/: __init__.py  serializers.py  views.py
apps/applications/api_endpoints/ApplicationUpdateDetail/: __init__.py  serializers.py  views.py
apps/applications/api_endpoints/BranchCreate/: __init__.py  serializers.py  views.py
apps/applications/api_endpoints/BranchDelete/: __init__.py  views.py
apps/applications/api_endpoints/BranchList/: __init__.py  serializers.py  views.py
apps/applications/api_endpoints/BranchUpdateDetail/: __init__.py  serializers.py  views.py
apps/applications/api_endpoints/EquipmentCreate/: __init__.py  serializers.py  views.py
apps/applications/api_endpoints/EquipmentDelete/: __init__.py  views.py
apps/applications/api_endpoints/EquipmentList/: views.py  (+2 more)
apps/applications/migrations/: 0001_initial.py  0002_alter_applicationbranch_options_and_more.py  0003_application_application_status_1508e0_idx.py
apps/common/: urls.py
apps/users/: admin.py  managers.py  models.py  urls.py
apps/users/api_endpoints/: __init__.py
apps/users/migrations/: 0001_initial.py  0002_customuser_is_confirmed_alter_customuser_is_staff.py
core/: jazzmin_conf.py  urls.py
core/settings/: base.py  dev.py  prod.py
templates/: home.html
(+56 files in other folders)
